# mcptools

./: .gitignore  ATLASSIAN_QUICK_START.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  REFACTORING-PLAN.md  typos.toml
.claude/: settings.local.json
.claude/context/: annotations.md  atlas.md  bitbucket.md  confluence.md  greprag.md  hackernews.md  jira.md  lint.md  mcp-server.md  pdf.md  strand.md  testing.md
.github/workflows/: ci.yml  dependabot.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: annotations.rs  hn.rs  lib.rs  md.rs  pagination.rs  queries.rs  upgrade.rs
crates/core/src/atlas/: changes.rs  config.rs  hash.rs  mod.rs  parse.rs  prompts.rs  symbols.rs  tree_view.rs  types.rs
crates/core/src/atlassian/: bitbucket.rs  confluence.rs  jira.rs  mod.rs
crates/core/src/greprag/: dedup.rs  format.rs  idf.rs  mod.rs  parse.rs  rank.rs  select.rs  types.rs
crates/core/src/strand/: extract.rs  mod.rs  prompt.rs  types.rs
crates/mcptools/: Cargo.toml  README.md
crates/mcptools/src/: error.rs  hn.rs  kms.rs  main.rs  mcp.rs  md.rs  prelude.rs  upgrade.rs
crates/mcptools/src/atlas/: config.rs  data.rs  db.rs  fs.rs  llm.rs  mod.rs  parser.rs
crates/mcptools/src/atlas/cli/: index.rs  init.rs  mod.rs  peek.rs  status.rs  sync.rs  tree.rs  update.rs
crates/mcptools/src/atlassian/: confluence.rs  jira.rs  mod.rs
crates/mcptools/src/atlassian/bitbucket/: mod.rs
crates/mcptools/src/atlassian/bitbucket/pr/: create.rs  list.rs  mod.rs  read.rs
crates/mcptools/src/atlassian/bitbucket/repo/: branches.rs  list.rs  mod.rs
crates/mcptools/src/atlassian/bitbucket/repo/deploy_key/: add.rs  list.rs  mod.rs  remove.rs
crates/mcptools/src/atlassian/bitbucket/workspace/: list.rs  mod.rs
crates/mcptools/src/atlassian/jira/: adf.rs  attachment.rs  cache.rs  comment.rs  create.rs  fields.rs  get.rs  list.rs  mod.rs  read.rs  search.rs  sprint.rs  types.rs  update.rs
crates/mcptools/src/greprag/: mod.rs
crates/mcptools/src/hn/: list_items.rs  mod.rs  read_item.rs
crates/mcptools/src/mcp/: cli.rs  mod.rs  resources.rs  sse.rs  stdio.rs
crates/mcptools/src/mcp/tools/: annotations.rs  atlas.rs  atlassian.rs  greprag.rs  hn.rs  md.rs  mod.rs  pdf.rs  strand.rs
crates/mcptools/src/md/: fetch.rs  mod.rs  toc.rs
crates/mcptools/src/pdf/: mod.rs
crates/mcptools/src/strand/: mod.rs
crates/pdf/: Cargo.toml
crates/pdf/src/: images.rs  lib.rs  tree.rs  types.rs
crates/pdf/src/parser/: backend.rs  layout.rs  mod.rs  table.rs
crates/pdf/src/render/: cleanup.rs  markdown.rs  mod.rs
docs/: ATLASSIAN_QUICK_START.md  ATLASSIAN_SETUP.md  ATLAS_SETUP.md  GREPRAG_SETUP.md
docs/context/: upgrade.md  web-scraping.md
docs/shaping/: agent-lint-command-slices.md  agent-lint-command.md  jql-exclamation-escape.md  spike-jql-exclamation.md
models/atlas/: Modelfile
models/greprag/: Modelfile
scripts/: install-hooks.sh  install.sh  release.sh
scripts/hooks/: pre-commit
xtask/: Cargo.toml
xtask/src/: cli.rs  main.rs  scripts.rs
xtask/src/scripts/: mod.rs  release.rs
xtask/src/scripts/lint/: hooks.rs  mod.rs
