[workspace]
members = ["xtask/", "crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Guzmán Monné"]

[profile.dev]
# Disabling debug info speeds up builds.
debug = 0

[profile.release]
incremental = true
# Set this to 1 or 2 to get more useful backtraces in debugger.
debug = 0

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.138"
clap = { version = "4.5.48", features = ["derive", "string", "env"] }
color-eyre = "0.6.5"
env_logger = "0.11.8"
log = "0.4.28"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
anstream = "0.6.20"
prettytable = "0.10.0"
futures = "0.3.31"
reqwest = { version = "0.12", features = ["json"] }
regex = "1.11.1"
chrono = "0.4.39"
