[package]
name = "mcptools_core"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/mcptools"
description = "Core for the mcptools project"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "mcptools_core"
path = "src/lib.rs"

[dependencies]
# Core dependencies for pure transformation functions
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
html-escape = { workspace = true }
chrono = { workspace = true }
html2md = { workspace = true }
scraper = { workspace = true }
md5 = "0.7"

[dev-dependencies]
tempfile = "3.24"
