[package]
name = "mcptools"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/mcptools"
description = "Useful MCP Tools to use with LLM Coding Agents"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mcptools"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
anstream = { workspace = true }
prettytable = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
