[package]
name = "mcptools"
version = "0.6.0"
homepage = "https://github.com/cloudbridgeuy/mcptools"
description = "Useful MCP Tools to use with LLM Coding Agents"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mcptools"
path = "src/main.rs"

[dependencies]
mcptools_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
anstream = { workspace = true }
prettytable = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
colored = { workspace = true }
headless_chrome = { workspace = true }
html2md = { workspace = true }
scraper = { workspace = true }
base64 = { workspace = true }
urlencoding = { workspace = true }
