[package]
name = "pdf"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
lopdf = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
unicode-normalization = { workspace = true }
rand = { workspace = true }
image = { workspace = true }
fax = { workspace = true }
